# DAF

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt
examples/: daf_config_example.yml  example_dataset.csv  hand_annotator_rules_example.csv  hostname_annotator_full_match_example.csv  hostname_annotator_sequences_example.csv  hostname_annotator_subsequences_example.csv
src/: annotation.py  daf.py  ip.py  ip_ranges.py  load.py  output.py  stats.py  taxonomy_checker.py
src/annotators/hand_annotator/: README.md  hand_annotator.py
src/annotators/hostname_annotator/: README.md  hostname_annotator.py
src/annotators/mac_annotator/: README.md  mac_annotator.py  vendor_os_db.csv
src/annotators/shodan_annotator/: README.md  shodan_annotator.py
src/annotators/sni_annotator/: README.md  os_database.csv  sni_annotator.py
src/annotators/useragent_annotator/: README.md  create_placeholder.py  mine_os.py  prepare_csv_table.py  translate_useragent.py  useragent_annotator.py
src/detectors/nat_detector/: README.md  nat_detector.py
taxonomies/: dev_taxonomy.json  os_taxonomy.json
